invoice_view report

--- a/invoice-reports/invoice_view.jrxml
+++ b/invoice-reports/invoice_view.jrxml
@@ -256,7 +256,7 @@ WHERE id.id = 4]]>
 			<staticText>
 				<reportElement x="2" y="85" width="121" height="42" uuid="a4e6d727-ff85-4c28-b248-8502f2b26457"/>
 				<textElement>
-					<font size="12"/>
+					<font size="12" isBold="true"/>
 				</textElement>
 				<text><![CDATA[Apna Agora
 Tallahassee, Florida]]></text>
@@ -276,144 +276,67 @@ Tallahassee, Florida]]></text>
 		</band>
 	</title>
 	<pageHeader>
-		<band height="133" splitType="Stretch">
-			<staticText>
-				<reportElement x="1" y="8" width="100" height="22" forecolor="#BD918F" backcolor="#E69D9C" uuid="948ad171-d383-4383-91e3-ce2659fb55db"/>
-				<textElement>
-					<font size="12"/>
-				</textElement>
-				<text><![CDATA[Invoice from:]]></text>
-			</staticText>
-			<textField textAdjust="StretchHeight">
-				<reportElement stretchType="RelativeToBandHeight" x="1" y="30" width="189" height="20" uuid="dbe1f22d-5b48-4b02-af88-15859e25b61b"/>
-				<textElement>
-					<font isBold="true"/>
-				</textElement>
-				<textFieldExpression><![CDATA[$F{supplier_name}]]></textFieldExpression>
-			</textField>
-			<textField textAdjust="StretchHeight">
-				<reportElement x="1" y="51" width="189" height="20" uuid="d83540f6-647b-4021-943b-f18904f8d443"/>
-				<textFieldExpression><![CDATA[$F{contact_person}]]></textFieldExpression>
-			</textField>
-			<textField textAdjust="StretchHeight">
-				<reportElement x="1" y="73" width="189" height="20" uuid="ebdb2f66-949e-44a0-81f8-c46b4d0d315b"/>
-				<textFieldExpression><![CDATA[$F{address}]]></textFieldExpression>
-			</textField>
-			<textField>
-				<reportElement x="1" y="101" width="189" height="21" uuid="d4b4eed3-4417-4f47-879b-686d7560202d"/>
-				<textFieldExpression><![CDATA[$F{phone}]]></textFieldExpression>
-			</textField>
-			<textField>
-				<reportElement x="1" y="115" width="189" height="18" uuid="efe6c2f4-7e3e-4bbf-8a73-06173c0061bf"/>
-				<textFieldExpression><![CDATA[$F{email}]]></textFieldExpression>
-			</textField>
-			<staticText>
-				<reportElement x="376" y="8" width="100" height="22" forecolor="#BD918F" backcolor="#E69D9C" uuid="4469ad0f-6734-40ef-89ff-4e725cf3ceca"/>
-				<textElement>
-					<font size="12"/>
-				</textElement>
-				<text><![CDATA[Payment Details:]]></text>
-			</staticText>
-			<staticText>
-				<reportElement x="376" y="30" width="100" height="14" uuid="dde72ce3-f689-4766-a422-6dd13226b869"/>
-				<text><![CDATA[Total Due:]]></text>
-			</staticText>
-			<textField>
-				<reportElement key="" isPrintRepeatedValues="false" x="472" y="30" width="82" height="21" forecolor="#9247DE" uuid="b92c9605-79bd-4926-a741-08f3d1a5a98c"/>
-				<textElement textAlignment="Right"/>
-				<textFieldExpression><![CDATA["$"+new java.text.DecimalFormat("#,##0.00").format($F{net_due})]]></textFieldExpression>
-			</textField>
-			<staticText>
-				<reportElement x="376" y="47" width="100" height="14" uuid="b532eb0f-5154-427a-aad5-6b08e493401b"/>
-				<text><![CDATA[Payment Status:]]></text>
-			</staticText>
-			<textField>
-				<reportElement x="476" y="48" width="81" height="18" forecolor="#C93936" uuid="3b2c49de-3bd4-485c-8d81-6d00494b4817"/>
-				<textElement textAlignment="Right"/>
-				<textFieldExpression><![CDATA[$F{is_paid} ? "PAID" : "UNPAID"]]></textFieldExpression>
-			</textField>
-			<staticText>
-				<reportElement x="376" y="85" width="100" height="14" uuid="5fac4b35-57be-4432-b082-75fb3b8a0272"/>
-				<text><![CDATA[Cheque Number:]]></text>
-			</staticText>
-			<textField>
-				<reportElement x="462" y="86" width="100" height="26" uuid="9d5757eb-f3b0-4dea-9e7a-98a0f070af9d"/>
-				<textElement textAlignment="Right"/>
-				<textFieldExpression><![CDATA[org.apache.commons.lang3.StringUtils.defaultIfBlank($F{cheque_number}, "N/A")]]></textFieldExpression>
-			</textField>
-			<staticText>
-				<reportElement x="376" y="65" width="100" height="14" uuid="7f37d666-9bd4-464a-9cb5-d2b1a30f31e2"/>
-				<text><![CDATA[Paid date:]]></text>
-			</staticText>
-			<textField>
-				<reportElement x="479" y="65" width="82" height="16" uuid="6c0b395e-2c53-482c-acdc-133be4c2f73d"/>
-				<textElement textAlignment="Right"/>
-				<textFieldExpression><![CDATA[$F{paid_date} == null ? "N/A" : $F{paid_date}.toString().replace("-", "/").replaceAll("(\\d{4})/(\\d{2})/(\\d{2})", "$2-$3-$1")]]></textFieldExpression>
-			</textField>
-		</band>
+		<band height="66" splitType="Stretch"/>
 	</pageHeader>
 	<columnHeader>
-		<band height="207" splitType="Stretch"/>
-	</columnHeader>
-	<detail>
-		<band height="260">
+		<band height="344" splitType="Stretch">
 			<componentElement>
-				<reportElement x="2" y="6" width="565" height="60" uuid="906385e9-ef13-439e-bc01-608db331df7f">
+				<reportElement x="3" y="188" width="565" height="60" uuid="e593c4a7-0291-4f86-85c9-a8a00117da78">
 					<property name="com.jaspersoft.studio.layout" value="com.jaspersoft.studio.editor.layout.VerticalRowLayout"/>
 					<property name="com.jaspersoft.studio.table.style.table_header" value="Table 1_TH"/>
 					<property name="com.jaspersoft.studio.table.style.column_header" value="Table 1_CH"/>
 					<property name="com.jaspersoft.studio.table.style.detail" value="Table 1_TD"/>
 				</reportElement>
 				<jr:table xmlns:jr="http://jasperreports.sourceforge.net/jasperreports/components" xsi:schemaLocation="http://jasperreports.sourceforge.net/jasperreports/components http://jasperreports.sourceforge.net/xsd/components.xsd">
-					<datasetRun subDataset="Dataset1" uuid="1b0b2fc4-16b2-4a1b-b600-ae853af0531b">
+					<datasetRun subDataset="Dataset1" uuid="71076af3-a5ff-4286-8e50-281501d48a8c">
 						<connectionExpression><![CDATA[$P{REPORT_CONNECTION}]]></connectionExpression>
 					</datasetRun>
-					<jr:column width="190" uuid="1eacd3aa-771f-4bf7-8e8e-353269454ea8">
+					<jr:column width="190" uuid="ea525068-b587-4a49-9e19-7bb4fdd49121">
 						<property name="com.jaspersoft.studio.components.table.model.column.name" value="Column1"/>
 						<jr:columnHeader style="Table 1_CH" height="30">
 							<staticText>
-								<reportElement x="0" y="0" width="190" height="30" uuid="13890e9c-4c32-4fd5-afa8-73f096a8ce6a"/>
+								<reportElement x="0" y="0" width="190" height="30" uuid="d037848a-c27b-4a8c-83ac-fdcb2cac9125"/>
 								<textElement textAlignment="Center" verticalAlignment="Middle"/>
 								<text><![CDATA[Invoice Date]]></text>
 							</staticText>
 						</jr:columnHeader>
 						<jr:detailCell style="Table 1_TD" height="30">
 							<textField>
-								<reportElement x="0" y="0" width="190" height="30" uuid="4e1a87f4-9ee1-47f1-be63-da78db3a8289"/>
+								<reportElement x="0" y="0" width="190" height="30" uuid="f6afef99-15c2-4291-a1ec-e21e6b4c2ec6"/>
 								<textElement textAlignment="Center" verticalAlignment="Middle"/>
 								<textFieldExpression><![CDATA[$F{invoice_date} == null ? "N/A" : $F{invoice_date}.toString().replace("-", "/").replaceAll("(\\d{4})/(\\d{2})/(\\d{2})", "$2-$3-$1")]]></textFieldExpression>
 							</textField>
 						</jr:detailCell>
 					</jr:column>
-					<jr:column width="200" uuid="c51e7d1d-4032-48f9-8d84-87900a02b231">
+					<jr:column width="200" uuid="2d9f12b3-7d56-483c-968e-6978a2da30c1">
 						<property name="com.jaspersoft.studio.components.table.model.column.name" value="Column2"/>
 						<jr:columnHeader style="Table 1_CH" height="30">
 							<staticText>
-								<reportElement x="0" y="0" width="200" height="30" uuid="05a68004-8be7-491f-9ea1-f16f718252d9"/>
+								<reportElement x="0" y="0" width="200" height="30" uuid="5c5c4bfb-0501-48f1-823e-72b52122666a"/>
 								<textElement textAlignment="Center" verticalAlignment="Middle"/>
 								<text><![CDATA[Terms]]></text>
 							</staticText>
 						</jr:columnHeader>
 						<jr:detailCell style="Table 1_TD" height="30">
 							<textField>
-								<reportElement x="0" y="0" width="200" height="30" uuid="2f3f6ed6-9df2-4f29-86b1-ee76ec70e81a"/>
+								<reportElement x="0" y="0" width="200" height="30" uuid="9dedb666-986a-44ff-945f-32ef15a95b2b"/>
 								<textElement textAlignment="Center" verticalAlignment="Middle"/>
 								<textFieldExpression><![CDATA[$F{term}]]></textFieldExpression>
 							</textField>
 						</jr:detailCell>
 					</jr:column>
-					<jr:column width="174" uuid="9bd6c5f4-2678-40d2-832d-18e82f25adf4">
+					<jr:column width="174" uuid="7d79bc1a-675a-4ddb-b572-0e9cd3c7d049">
 						<property name="com.jaspersoft.studio.components.table.model.column.name" value="Column3"/>
 						<jr:columnHeader style="Table 1_CH" height="30">
 							<staticText>
-								<reportElement x="0" y="0" width="174" height="30" uuid="cdde1b35-87c7-4043-a431-2c39b6c41e40"/>
+								<reportElement x="0" y="0" width="174" height="30" uuid="fec703fb-5667-4701-91eb-06092e72decd"/>
 								<textElement textAlignment="Center" verticalAlignment="Middle"/>
 								<text><![CDATA[Due Date]]></text>
 							</staticText>
 						</jr:columnHeader>
 						<jr:detailCell style="Table 1_TD" height="30">
 							<textField>
-								<reportElement x="0" y="0" width="174" height="30" uuid="ea6fd84c-317d-4ecf-ad1c-6fee6f0b10e0"/>
+								<reportElement x="0" y="0" width="174" height="30" uuid="450d5b0b-1560-4cc0-9df2-27f0ac6e1fcc"/>
 								<textElement textAlignment="Center" verticalAlignment="Middle"/>
 								<textFieldExpression><![CDATA[$F{payment_due_date} == null ? "N/A" : $F{payment_due_date}.toString().replace("-", "/").replaceAll("(\\d{4})/(\\d{2})/(\\d{2})", "$2-$3-$1")]]></textFieldExpression>
 							</textField>
@@ -421,62 +344,157 @@ Tallahassee, Florida]]></text>
 					</jr:column>
 				</jr:table>
 			</componentElement>
+			<staticText>
+				<reportElement x="6" y="13" width="100" height="22" forecolor="#BD918F" backcolor="#E69D9C" uuid="f4535214-bd54-467c-b789-db1348cf468d"/>
+				<textElement>
+					<font size="12" isBold="true"/>
+				</textElement>
+				<text><![CDATA[Invoice from:]]></text>
+			</staticText>
+			<textField textAdjust="StretchHeight">
+				<reportElement stretchType="RelativeToBandHeight" x="6" y="35" width="189" height="20" uuid="e1ccce9c-d248-4e97-beb6-816d87e5f8a0"/>
+				<textElement>
+					<font isBold="true"/>
+				</textElement>
+				<textFieldExpression><![CDATA[$F{supplier_name}]]></textFieldExpression>
+			</textField>
+			<textField textAdjust="StretchHeight">
+				<reportElement x="6" y="56" width="189" height="20" uuid="5fa3f3f4-134f-43f6-b0ae-c59e293c400a"/>
+				<textFieldExpression><![CDATA[$F{contact_person}]]></textFieldExpression>
+			</textField>
+			<textField textAdjust="StretchHeight">
+				<reportElement x="6" y="78" width="274" height="26" uuid="7738c504-bb2a-4cd2-a92a-57479bffadf8"/>
+				<textFieldExpression><![CDATA[$F{address}]]></textFieldExpression>
+			</textField>
+			<textField>
+				<reportElement x="6" y="113" width="189" height="21" uuid="19eec891-4370-425c-8f44-42ad65f8ebc9"/>
+				<textFieldExpression><![CDATA[$F{phone}]]></textFieldExpression>
+			</textField>
+			<textField>
+				<reportElement x="6" y="131" width="189" height="18" uuid="5310410c-c751-4d45-9331-07fda503c58b"/>
+				<textFieldExpression><![CDATA[$F{email}]]></textFieldExpression>
+			</textField>
+			<staticText>
+				<reportElement x="373" y="13" width="100" height="22" forecolor="#BD918F" backcolor="#E69D9C" uuid="700994e5-2f8c-47aa-aa6d-14fb6d24c337"/>
+				<textElement>
+					<font size="12" isBold="true"/>
+				</textElement>
+				<text><![CDATA[Payment Details:]]></text>
+			</staticText>
+			<staticText>
+				<reportElement x="373" y="37" width="100" height="14" uuid="5fd594f6-43a4-419e-a601-5851e6385c17"/>
+				<textElement>
+					<font isBold="true"/>
+				</textElement>
+				<text><![CDATA[Total Due:]]></text>
+			</staticText>
+			<staticText>
+				<reportElement x="373" y="60" width="100" height="14" uuid="ed751a95-2288-4e3c-b7d5-7d43e0f10f65"/>
+				<textElement>
+					<font isBold="true"/>
+				</textElement>
+				<text><![CDATA[Payment Status:]]></text>
+			</staticText>
+			<staticText>
+				<reportElement x="373" y="84" width="100" height="14" uuid="b3a1dee2-8cd3-4e7d-99ce-5cf155c4fc0a"/>
+				<textElement>
+					<font isBold="true"/>
+				</textElement>
+				<text><![CDATA[Paid date:]]></text>
+			</staticText>
+			<staticText>
+				<reportElement x="373" y="109" width="100" height="14" uuid="9af70238-fcd3-4908-9ae7-fc2afe0317b5"/>
+				<textElement>
+					<font isBold="true"/>
+				</textElement>
+				<text><![CDATA[Cheque Number:]]></text>
+			</staticText>
+			<textField>
+				<reportElement x="456" y="110" width="100" height="26" uuid="d05acd79-8e48-44b4-9e3a-564283f48ccd"/>
+				<textElement textAlignment="Right"/>
+				<textFieldExpression><![CDATA[org.apache.commons.lang3.StringUtils.defaultIfBlank($F{cheque_number}, "N/A")]]></textFieldExpression>
+			</textField>
+			<textField>
+				<reportElement x="474" y="84" width="82" height="16" uuid="bb866f00-ee5b-4f84-8e2e-a33a510aac21"/>
+				<textElement textAlignment="Right"/>
+				<textFieldExpression><![CDATA[$F{paid_date} == null ? "N/A" : $F{paid_date}.toString().replace("-", "/").replaceAll("(\\d{4})/(\\d{2})/(\\d{2})", "$2-$3-$1")]]></textFieldExpression>
+			</textField>
+			<textField>
+				<reportElement x="474" y="61" width="81" height="18" forecolor="#C93936" uuid="35b5aa8b-b184-4ba0-85de-759d438886b8"/>
+				<textElement textAlignment="Right"/>
+				<textFieldExpression><![CDATA[$F{is_paid} ? "PAID" : "UNPAID"]]></textFieldExpression>
+			</textField>
+			<textField>
+				<reportElement key="" isPrintRepeatedValues="false" x="471" y="37" width="82" height="21" forecolor="#9247DE" uuid="89734569-a2a5-4586-b387-0aa0ca770438"/>
+				<textElement textAlignment="Right"/>
+				<textFieldExpression><![CDATA["$"+new java.text.DecimalFormat("#,##0.00").format($F{net_due})]]></textFieldExpression>
+			</textField>
 			<line>
-				<reportElement x="308" y="69" width="253" height="1" forecolor="#ACE6E8" uuid="65dde932-d608-42d7-b2c8-ab7960967f30"/>
+				<reportElement x="310" y="259" width="258" height="1" forecolor="#ACE6E8" uuid="da1fd129-0fb7-4691-b1db-c39a4db5f866"/>
 			</line>
 			<staticText>
-				<reportElement x="308" y="78" width="100" height="21" uuid="b9caa5ab-c91c-4089-b0e1-344a45df523a"/>
+				<reportElement x="310" y="267" width="100" height="21" uuid="d827afdc-04de-493a-aef3-9964bc3b4737"/>
 				<text><![CDATA[Invoice Amount:]]></text>
 			</staticText>
-			<line>
-				<reportElement x="308" y="99" width="253" height="1" forecolor="#ACE6E8" uuid="fe8b625d-b6ab-4e65-a105-66cf4fe46617"/>
-			</line>
 			<staticText>
-				<reportElement x="308" y="105" width="100" height="21" uuid="9f0668f9-1585-463b-9dcd-92231392fa87"/>
+				<reportElement x="310" y="294" width="100" height="21" uuid="151ea985-f031-437d-8851-d2d1070a3452"/>
 				<text><![CDATA[Credit Amount:]]></text>
 			</staticText>
 			<line>
-				<reportElement x="309" y="126" width="253" height="1" forecolor="#ACE6E8" uuid="d39864fd-36e9-4877-9ac9-ca553a1e8e6b"/>
+				<reportElement x="311" y="315" width="257" height="1" forecolor="#ACE6E8" uuid="a7454670-5342-4592-9c6b-9d714cf94289"/>
 			</line>
 			<staticText>
-				<reportElement x="310" y="131" width="100" height="21" uuid="aa2a1e38-480f-4540-9cad-d20ac1375e70"/>
+				<reportElement x="312" y="320" width="100" height="21" uuid="e2d89314-d268-4a4b-b6e7-7244783cb5b3"/>
 				<textElement>
 					<font isBold="true"/>
 				</textElement>
 				<text><![CDATA[Net Due:]]></text>
 			</staticText>
 			<textField>
-				<reportElement x="455" y="80" width="100" height="17" forecolor="#9247DE" uuid="ab9f2309-30f7-4fbe-af28-6de425923792"/>
+				<reportElement x="457" y="269" width="100" height="17" forecolor="#9247DE" uuid="f2c90f7c-8e55-4370-91e0-14fb8eba775d"/>
 				<textElement textAlignment="Right"/>
 				<textFieldExpression><![CDATA["$"+new java.text.DecimalFormat("#,##0.00").format($F{invoice_amount})]]></textFieldExpression>
 			</textField>
 			<textField>
-				<reportElement x="455" y="105" width="100" height="21" forecolor="#9247DE" uuid="cfa2a862-acd9-4a8a-bba9-2eb57310bc25"/>
+				<reportElement x="457" y="294" width="100" height="21" forecolor="#9247DE" uuid="690fd135-e5c8-479a-94b3-4b7d2f075d41"/>
 				<textElement textAlignment="Right"/>
 				<textFieldExpression><![CDATA["$"+new java.text.DecimalFormat("#,##0.00").format($F{credit_amount})]]></textFieldExpression>
 			</textField>
 			<textField isBlankWhenNull="true">
-				<reportElement x="455" y="132" width="100" height="20" forecolor="#9247DE" uuid="4c378478-178b-457d-94bd-c843f77664ef"/>
+				<reportElement x="457" y="321" width="100" height="20" forecolor="#9247DE" uuid="5425a8b4-7f67-4eaf-8cd8-f2f65ceeefdf"/>
 				<textElement textAlignment="Right"/>
 				<textFieldExpression><![CDATA["$"+new java.text.DecimalFormat("#,##0.00").format($F{net_due})]]></textFieldExpression>
 			</textField>
+			<line>
+				<reportElement x="310" y="288" width="258" height="3" forecolor="#ACE6E8" uuid="459d1fdf-b453-482b-8ebe-ebc851313394"/>
+			</line>
 		</band>
-	</detail>
+	</columnHeader>
 	<columnFooter>
-		<band height="78"/>
-	</columnFooter>
-	<pageFooter>
-		<band height="54" splitType="Stretch">
+		<band height="78">
 			<staticText>
-				<reportElement x="-9" y="-2" width="100" height="21" uuid="8b0a781c-37b7-472b-a088-713b6f72a263"/>
+				<reportElement x="-4" y="3" width="100" height="21" uuid="12f1c694-4fad-4d2c-8c57-4e607e3a0397"/>
 				<textElement>
 					<font isBold="true"/>
 				</textElement>
 				<text><![CDATA[Description]]></text>
 			</staticText>
 			<textField textAdjust="StretchHeight">
-				<reportElement x="-9" y="18" width="100" height="30" forecolor="#56B6BF" uuid="488d9c8c-da2b-4d07-9944-716af7859d1c"/>
+				<reportElement x="-4" y="23" width="100" height="30" forecolor="#56B6BF" uuid="9af3cb2a-1f92-406c-a3ec-712e5bc78981"/>
 				<textFieldExpression><![CDATA[$F{invoice_desc}  == null ? "No data to display" : $F{invoice_desc}]]></textFieldExpression>
+			</textField>
+		</band>
+	</columnFooter>
+	<pageFooter>
+		<band height="60" splitType="Stretch">
+			<textField>
+				<reportElement x="80" y="2" width="375" height="18" forecolor="#BD918F" uuid="15df6c29-09a6-40b4-b9aa-eba17ada1213"/>
+				<textElement textAlignment="Center"/>
+				<textFieldExpression><![CDATA["\u00A9 Apna Agora, Tallahasse, Florida " ]]></textFieldExpression>
+			</textField>
+			<textField pattern="MMMMM dd, yyyy">
+				<reportElement x="227" y="18" width="100" height="20" forecolor="#BD918F" uuid="6d1df185-c843-41ae-902e-4a6fdcd7f856"/>
+				<textFieldExpression><![CDATA[new java.util.Date()]]></textFieldExpression>
 			</textField>
 		</band>
 	</pageFooter>
